--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="6.2.2" targetFramework="net40" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net40" requireReinstallation="true" />
   <package id="csmpfit" version="1.1.1" targetFramework="net40" />
-  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net40" />
-  <package id="Meta.Numerics" version="3.1.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
-  <package id="NLog" version="4.5.2" targetFramework="net40" />
-  <package id="Rx-Core" version="2.2.4" targetFramework="net40" />
-  <package id="Rx-Interfaces" version="2.2.4" targetFramework="net40" />
-  <package id="Rx-Linq" version="2.2.4" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="Meta.Numerics" version="4.0.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="NLog" version="4.5.3" targetFramework="net461" />
+  <package id="Rx-Core" version="2.2.4" targetFramework="net40" requireReinstallation="true" />
+  <package id="Rx-Interfaces" version="2.2.4" targetFramework="net40" requireReinstallation="true" />
+  <package id="Rx-Linq" version="2.2.4" targetFramework="net40" requireReinstallation="true" />
   <package id="Rx-Main" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net40" />
-  <package id="Unity" version="5.8.5" targetFramework="net40" />
+  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net40" requireReinstallation="true" />
+  <package id="Unity" version="5.8.6" targetFramework="net461" />
 </packages>
