--- a/src/Vts.MGRTE.ConsoleApp/packages.config
+++ b/src/Vts.MGRTE.ConsoleApp/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net40" />
-  <package id="NLog" version="4.5.2" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="NLog" version="4.5.3" targetFramework="net461" />
 </packages>
