--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -5,7 +5,7 @@
     <Description>The VTS (Virtual Tissue Simulator) is an open source library for .NET that was designed as a modular and scalable platform to provide an integrated suite of computational tools to define, solve, visualize, and analyze relevant forward and inverse radiative transport problems in Biomedical Optics.</Description>
     <Company>Virtual Photonics Technology Initiative</Company>
     <Copyright>Copyright © 2018 Laser Microbeam and Medical Program</Copyright>
-    <Version>3.2.0-alpha</Version>
+    <Version>4.1.0-alpha</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
     <PackageId>VirtualPhotonics.Vts</PackageId>
@@ -15,8 +15,8 @@
     <PackageProjectUrl>https://github.com/VirtualPhotonics/VTS/wiki</PackageProjectUrl>
     <RepositoryUrl>https://github.com/VirtualPhotonics/VTS</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <PackageReleaseNotes>Added a pre-release version for .NET Standard</PackageReleaseNotes>
-    <AssemblyVersion>3.2.0.0</AssemblyVersion>
+    <PackageReleaseNotes>Updated NuGet packages</PackageReleaseNotes>
+    <AssemblyVersion>4.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
