MC: added new detector Flu(rho,z,ft) and unit test.  Beefed up unit test for Flu(x,y,z,ft) to check the integral of fluence sums to Atot/mua as I did in unit test for Flu(rho,z,ft).

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -662,6 +662,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\dMCdROfRhodMusDetector.cs">
       <Link>MonteCarlo\Detectors\dMCdROfRhodMusDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\FluenceOfRhoAndZAndOmegaDetector.cs">
+      <Link>MonteCarlo\Detectors\FluenceOfRhoAndZAndOmegaDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\FluenceOfRhoAndZAndTimeDetector.cs">
       <Link>MonteCarlo\Detectors\FluenceOfRhoAndZAndTimeDetector.cs</Link>
     </Compile>
