MC: modifications to allow the infile to specify Tissue RegionOPs with Mus and no Musp, Musp and no Mus or both.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -296,6 +296,9 @@
     <Compile Include="..\Vts\Common\OpticalProperties.cs">
       <Link>Common\OpticalProperties.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\Common\OpticalPropertiesConverter.cs">
+      <Link>Common\OpticalPropertiesConverter.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\Common\Position.cs">
       <Link>Common\Position.cs</Link>
     </Compile>
