MC: added new InfiniteCylinderTissueRegion for using in SingleInclusionTissue and replace the use of a very elongated ellipsoid to represent a cylinder.  Thought is that cylinder code will run faster and allow easier refractive index mismatch code. Added a first stab at unit tests for it and EllipsoidTissueRegion.  Realized that the logic in EllipsoidTissueRegion ContainsPosition when the Photon is on the boundary appears wrong, however, modification of the return from true to false causes unit tests to fail (and they agree with linux).  Added infile sample in SimulationInputProvider that gives an example of a line Gaussian source, modified associated unit tests.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1070,6 +1070,9 @@
     <Compile Include="..\Vts\MonteCarlo\Tissues\EllipsoidTissueRegion.cs">
       <Link>MonteCarlo\Tissues\EllipsoidTissueRegion.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\InfiniteCylinderTissueRegion.cs">
+      <Link>MonteCarlo\Tissues\InfiniteCylinderTissueRegion.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\LayerTissueRegion.cs">
       <Link>MonteCarlo\Tissues\LayerTissueRegion.cs</Link>
     </Compile>
