MC: continued effort to add infinite cylinder tissue inclusion. Added SingleInfiniteCylinderTissue class, cleaned up code in InfiniteCylinderTissueRegion for efficiency, example in SimulationInputProvider.  Also cleaned up MCCL unit tests so that no files left behind. Plan to run simulations with new tissue to make sure results make sense.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1094,6 +1094,9 @@
     <Compile Include="..\Vts\MonteCarlo\Tissues\SingleInclusionTissue.cs">
       <Link>MonteCarlo\Tissues\SingleInclusionTissue.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\SingleInfiniteCylinderTissue.cs">
+      <Link>MonteCarlo\Tissues\SingleInfiniteCylinderTissue.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SingleVoxelTissue.cs">
       <Link>MonteCarlo\Tissues\SingleVoxelTissue.cs</Link>
     </Compile>
