--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="csmpfit" version="1.1.1" targetFramework="net461" />
-  <package id="MathNet.Numerics" version="4.5.1" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
   <package id="Meta.Numerics" version="4.0.7" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NLog" version="4.5.9" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="NLog" version="4.6.0" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.4" targetFramework="net461" />
   <package id="Rx-Interfaces" version="2.2.4" targetFramework="net461" />
   <package id="Rx-Linq" version="2.2.4" targetFramework="net461" />
@@ -12,8 +12,9 @@
   <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
-  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
-  <package id="Unity" version="5.8.10" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net461" />
+  <package id="Unity" version="5.10.1" targetFramework="net461" />
 </packages>
