--- a/src/Vts.MonteCarlo.PostProcessor.Test/packages.config
+++ b/src/Vts.MonteCarlo.PostProcessor.Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
 </packages>
