MC: modifications to allow the user to specify a cylinder tissue region representing a fiber.  Enabled the specification of a 0 height cylinder to represent a fiber adjacent to the tissue surface which would change transport for photons hitting surface underneath fiber (cylinder region has own OPs, in particular n).  Only partially complete.  Need more unit tests and validation code to verify user infile input.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -318,14 +318,19 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Tissues\CylinderTissueRegionTests.cs">
+      <Link>MonteCarlo\Tissues\CylinderTissueRegionTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\EllipsoidTissueRegionTests.cs">
       <Link>MonteCarlo\Tissues\EllipsoidTissueRegionTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Tissues\InfiniteCylinderTissueRegionTests.cs">
+      <Link>MonteCarlo\Tissues\InfiniteCylinderTissueRegionTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\SingleInclusionTissueTests.cs">
       <Link>MonteCarlo\Tissues\SingleInclusionTissueTests.cs</Link>
     </Compile>
     <Compile Include="FileIOTests.Desktop.cs" />
-    <Compile Include="MonteCarlo\Tissues\InfiniteCylinderTissueRegionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
