--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -656,6 +656,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\ATotalDetector.cs">
       <Link>MonteCarlo\Detectors\ATotalDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\CylindricalFiberDetector.cs">
+      <Link>MonteCarlo\Detectors\CylindricalFiberDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\Detector.cs">
       <Link>MonteCarlo\Detectors\Detector.cs</Link>
     </Compile>
@@ -1087,6 +1090,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SemiInfiniteTissueRegion.cs">
       <Link>MonteCarlo\Tissues\SemiInfiniteTissueRegion.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Tissues\SingleCylinderTissue.cs">
+      <Link>MonteCarlo\Tissues\SingleCylinderTissue.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SingleEllipsoidTissue.cs">
       <Link>MonteCarlo\Tissues\SingleEllipsoidTissue.cs</Link>
